[gd_scene load_steps=19 format=2]

[ext_resource path="res://img/displayManager.png" type="Texture" id=1]
[ext_resource path="res://FreeSans.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://displayManager/displayManager.gd" type="Script" id=3]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 1280, 1012 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.101961, 0, 0.247059, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.101961, 0, 0.247059, 1 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.101961, 0, 0.247059, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.101961, 0, 0.247059, 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[node name="displayManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="display" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="fck" type="Control" parent="display"]
margin_left = 192.0
margin_top = 200.0
margin_right = 568.0
margin_bottom = 272.0

[node name="VBoxContainer" type="VBoxContainer" parent="display/fck"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="display/fck/VBoxContainer"]
margin_right = 376.0
margin_bottom = 30.0

[node name="usernameLabel" type="Label" parent="display/fck/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 93.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 9 )
text = "User Name:  "

[node name="username" type="LineEdit" parent="display/fck/VBoxContainer/HBoxContainer"]
margin_left = 97.0
margin_right = 369.04
margin_bottom = 30.0
rect_min_size = Vector2( 272.04, 30 )
custom_fonts/font = SubResource( 7 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[node name="HBoxContainer2" type="HBoxContainer" parent="display/fck/VBoxContainer"]
margin_top = 34.0
margin_right = 376.0
margin_bottom = 64.0

[node name="userPasswordLabel" type="Label" parent="display/fck/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 121.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 10 )
text = "User Password:  "

[node name="userPassword" type="LineEdit" parent="display/fck/VBoxContainer/HBoxContainer2"]
margin_left = 125.0
margin_right = 375.026
margin_bottom = 30.0
rect_min_size = Vector2( 250.026, 30 )
custom_fonts/font = SubResource( 8 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
secret = true

[node name="Control" type="Control" parent="display/fck/VBoxContainer"]
margin_top = 68.0
margin_right = 376.0
margin_bottom = 87.4
rect_min_size = Vector2( 0, 19.4 )

[node name="HBoxContainer3" type="HBoxContainer" parent="display/fck/VBoxContainer"]
margin_top = 91.0
margin_right = 376.0
margin_bottom = 124.0

[node name="login" type="Button" parent="display/fck/VBoxContainer/HBoxContainer3"]
margin_right = 73.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
text = "Login"

[node name="login2" type="Button" parent="display/fck/VBoxContainer/HBoxContainer3"]
margin_left = 77.0
margin_right = 201.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
text = "skip login"

[node name="Control" type="Control" parent="display/fck/VBoxContainer/HBoxContainer3"]
margin_left = 205.0
margin_right = 214.526
margin_bottom = 33.0
rect_min_size = Vector2( 9.526, 0 )

[connection signal="pressed" from="display/fck/VBoxContainer/HBoxContainer3/login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="display/fck/VBoxContainer/HBoxContainer3/login2" to="." method="_on_login2_pressed"]
